Update DPDK and TAS repos and branches

--- a/.gitmodules
+++ b/.gitmodules
@@ -57,7 +57,8 @@
 [submodule "third_party/dpdk"]
 	path = third_party/dpdk
 	url = https://github.com/DPDK/dpdk.git
-    branch = v17.11
+	branch = v18.11-rc4
 [submodule "third_party/tas"]
 	path = third_party/tas
-	url = https://github.com/tcp-acceleration-service/tas.git
+	url = https://github.com/FreakyPenguin/tas.git
+	branch = rocketmq
