--- a/BUILD.gn
+++ b/BUILD.gn
@@ -429,6 +429,7 @@ config("grpc_config") {
         "src/core/ext/transport/inproc/inproc_plugin.cc",
         "src/core/ext/transport/inproc/inproc_transport.cc",
         "src/core/ext/transport/inproc/inproc_transport.h",
+        "src/core/ext/transport/tas/tas.cc",
         "src/core/lib/avl/avl.cc",
         "src/core/lib/avl/avl.h",
         "src/core/lib/backoff/backoff.cc",
@@ -879,6 +880,8 @@ config("grpc_config") {
         "//third_party/boringssl",
         "//third_party/zlib",
         ":gpr",
+        ":tas",
+        ":tas_sockets",
         "//third_party/cares",
         ":address_sorting",
         ":nanopb",
